deploy/k8s/blog-gatsby-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog-gatsby-svc
spec:
  ports:
    - name: nginx
      port: 80
  selector:
    app: blog-gatsby
  type: ClusterIP
