deploy/k8s/blog-gatsby-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-gatsby-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
    - hosts:
        - $(SITE_URL)
      secretName: blog-gatsby-tls
  rules:
    - host: $(SITE_URL)
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: blog-gatsby-svc
                port:
                  name: nginx
